--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "description": "S19 project ESlint config",
   "main": ".eslintrc.js",
   "dependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.9.0",
+    "eslint-config-airbnb": "17.1.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1"
   },
   "engines": {
-    "node": "6.10",
-    "npm": "5"
+    "node": "10.x",
+    "npm": "6.x"
   }
 }
